[package]
authors = ["Gavin Panella <gavin@allenap.me>"]
categories = ["encoding", "filesystem"]
description = "A Rust library for shell-quoting strings, e.g. for interpolating into a Bash script."
edition = "2021"
homepage = "https://github.com/allenap/shell-quote"
keywords = ["shell", "bash", "sh", "quote", "escape"]
license = "Apache-2.0"
name = "shell-quote"
readme = "README.md"
repository = "https://github.com/allenap/shell-quote"
version = "0.3.1"

[dependencies]
